--- a/doc/agile/sprint_backlog_100.org
+++ b/doc/agile/sprint_backlog_100.org
@@ -12,19 +12,20 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-21 Tue 11:52]
+#+CAPTION: Clock summary at [2017-03-21 Tue 12:09]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:05* |      |      | 100.0 |
+| *Total time*                                                                | *4:13* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:05   |      |      | 100.0 |
-| Active                                                                      |        | 4:05 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:11 |   4.5 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:30 |  12.2 |
-| COMPLETED Header directory is not part of housekeeping                      |        |      | 0:49 |  20.0 |
-| STARTED Implement the database model using Northwind                        |        |      | 1:58 |  48.2 |
-| STARTED Allow users to override string prefixes in test data                |        |      | 0:37 |  15.1 |
+| Stories                                                                     | 4:13   |      |      | 100.0 |
+| Active                                                                      |        | 4:13 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:11 |   4.3 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:30 |  11.9 |
+| COMPLETED Header directory is not part of housekeeping                      |        |      | 0:49 |  19.4 |
+| COMPLETED Disable common support on ODB for a single database               |        |      | 0:08 |   3.2 |
+| STARTED Implement the database model using Northwind                        |        |      | 1:58 |  46.6 |
+| STARTED Allow users to override string prefixes in test data                |        |      | 0:37 |  14.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -95,6 +96,15 @@ For all other architectures and/or operative systems, you will need to build Dog
 
 At present the housekeeper is not deleting files in the header
 directory.
+
+*** COMPLETED Disable common support on ODB for a single database     :story:
+    CLOSED: [2017-03-21 Tue 12:09]
+    CLOCK: [2017-03-21 Tue 12:01]--[2017-03-21 Tue 12:09] =>  0:08
+
+We are always enabling common regardless of how many database systems
+the user has requested. Similar with multiple database support. We
+should disable all of this (at least for now) on the single database
+scenario.
 
 *** STARTED Implement the database model using Northwind              :story:
     CLOCK: [2017-03-20 Mon 20:45]--[2017-03-20 Mon 22:43] =>  1:58
@@ -371,13 +381,6 @@ includes. There are some differences though:
 
 At present we need to fall back to ODB pragmas in order to rename a
 column. We should have =yarn.orm.column_name=.
-
-*** Disable common support on ODB for a single database               :story:
-
-We are always enabling common regardless of how many database systems
-the user has requested. Similar with multiple database support. We
-should disable all of this (at least for now) on the single database
-scenario.
 
 *** Setting include and source directory to empty                     :story:
 
