--- a/doc/agile/sprint_backlog_100.org
+++ b/doc/agile/sprint_backlog_100.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-21 Tue 14:26]
+#+CAPTION: Clock summary at [2017-03-21 Tue 17:16]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *4:49* |      |      | 100.0 |
+| *Total time*                                                                | *5:20* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 4:49   |      |      | 100.0 |
-| Active                                                                      |        | 4:49 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |        |      | 0:11 |   3.8 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:30 |  10.4 |
-| COMPLETED Header directory is not part of housekeeping                      |        |      | 0:49 |  17.0 |
-| COMPLETED Disable common support on ODB for a single database               |        |      | 0:08 |   2.8 |
-| STARTED Implement the database model using Northwind                        |        |      | 1:58 |  40.8 |
-| STARTED Allow users to override string prefixes in test data                |        |      | 0:37 |  12.8 |
-| STARTED Concepts cannot be placed inside of packages                        |        |      | 0:36 |  12.5 |
+| Stories                                                                     | 5:20   |      |      | 100.0 |
+| Active                                                                      |        | 5:20 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |        |      | 0:11 |   3.4 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 0:30 |   9.4 |
+| COMPLETED Header directory is not part of housekeeping                      |        |      | 0:49 |  15.3 |
+| COMPLETED Disable common support on ODB for a single database               |        |      | 0:08 |   2.5 |
+| STARTED Implement the database model using Northwind                        |        |      | 1:58 |  36.9 |
+| STARTED Allow users to override string prefixes in test data                |        |      | 0:37 |  11.6 |
+| STARTED Concepts cannot be placed inside of packages                        |        |      | 1:07 |  20.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -201,6 +201,7 @@ Tasks:
   simple struct.
 
 *** STARTED Concepts cannot be placed inside of packages              :story:
+    CLOCK: [2017-03-21 Tue 15:30]--[2017-03-21 Tue 16:01] =>  0:31
     CLOCK: [2017-03-21 Tue 14:10]--[2017-03-21 Tue 14:26] =>  0:16
     CLOCK: [2017-03-21 Tue 12:10]--[2017-03-21 Tue 12:30] =>  0:20
 
