--- a/doc/agile/sprint_backlog_100.org
+++ b/doc/agile/sprint_backlog_100.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-22 Wed 15:20]
+#+CAPTION: Clock summary at [2017-03-22 Wed 15:58]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *11:09* |       |      | 100.0 |
+| *Total time*                                                                | *11:45* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 11:09   |       |      | 100.0 |
-| Active                                                                      |         | 11:09 |      | 100.0 |
+| Stories                                                                     | 11:45   |       |      | 100.0 |
+| Active                                                                      |         | 11:45 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:11 |   1.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:30 |   4.5 |
-| COMPLETED Header directory is not part of housekeeping                      |         |       | 0:49 |   7.3 |
-| COMPLETED Disable common support on ODB for a single database               |         |       | 0:08 |   1.2 |
-| STARTED Implement the database model using Northwind                        |         |       | 1:58 |  17.6 |
-| STARTED Allow users to override string prefixes in test data                |         |       | 0:37 |   5.5 |
-| STARTED Concepts cannot be placed inside of packages                        |         |       | 6:56 |  62.2 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:30 |   4.3 |
+| COMPLETED Header directory is not part of housekeeping                      |         |       | 0:49 |   7.0 |
+| COMPLETED Disable common support on ODB for a single database               |         |       | 0:08 |   1.1 |
+| STARTED Implement the database model using Northwind                        |         |       | 1:58 |  16.7 |
+| STARTED Allow users to override string prefixes in test data                |         |       | 0:37 |   5.2 |
+| STARTED Concepts cannot be placed inside of packages                        |         |       | 7:32 |  64.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -201,6 +201,7 @@ Tasks:
   simple struct.
 
 *** STARTED Concepts cannot be placed inside of packages              :story:
+    CLOCK: [2017-03-22 Wed 15:48]--[2017-03-22 Wed 15:58] =>  0:10
     CLOCK: [2017-03-22 Wed 15:21]--[2017-03-22 Wed 15:47] =>  0:26
     CLOCK: [2017-03-22 Wed 14:35]--[2017-03-22 Wed 15:20] =>  0:45
     CLOCK: [2017-03-22 Wed 14:03]--[2017-03-22 Wed 14:34] =>  0:31
