--- a/doc/agile/sprint_backlog_100.org
+++ b/doc/agile/sprint_backlog_100.org
@@ -12,21 +12,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-22 Wed 16:35]
+#+CAPTION: Clock summary at [2017-03-22 Wed 16:55]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *12:17* |       |      | 100.0 |
+| *Total time*                                                                | *12:39* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 12:17   |       |      | 100.0 |
-| Active                                                                      |         | 12:17 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:11 |   1.5 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:30 |   4.1 |
-| COMPLETED Header directory is not part of housekeeping                      |         |       | 0:49 |   6.6 |
+| Stories                                                                     | 12:39   |       |      | 100.0 |
+| Active                                                                      |         | 12:39 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:11 |   1.4 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:30 |   4.0 |
+| COMPLETED Header directory is not part of housekeeping                      |         |       | 0:49 |   6.5 |
 | COMPLETED Disable common support on ODB for a single database               |         |       | 0:08 |   1.1 |
-| STARTED Implement the database model using Northwind                        |         |       | 1:58 |  16.0 |
-| STARTED Allow users to override string prefixes in test data                |         |       | 0:37 |   5.0 |
-| STARTED Concepts cannot be placed inside of packages                        |         |       | 8:04 |  65.7 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       | 8:26 |  66.7 |
+| STARTED Implement the database model using Northwind                        |         |       | 1:58 |  15.5 |
+| STARTED Allow users to override string prefixes in test data                |         |       | 0:37 |   4.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -106,6 +106,60 @@ We are always enabling common regardless of how many database systems
 the user has requested. Similar with multiple database support. We
 should disable all of this (at least for now) on the single database
 scenario.
+
+*** COMPLETED Concepts cannot be placed inside of packages            :story:
+    CLOSED: [2017-03-22 Wed 16:46]
+    CLOCK: [2017-03-22 Wed 16:47]--[2017-03-22 Wed 16:55] =>  0:08
+    CLOCK: [2017-03-22 Wed 16:32]--[2017-03-22 Wed 16:46] =>  0:14
+    CLOCK: [2017-03-22 Wed 15:59]--[2017-03-22 Wed 16:31] =>  0:32
+    CLOCK: [2017-03-22 Wed 15:48]--[2017-03-22 Wed 15:58] =>  0:10
+    CLOCK: [2017-03-22 Wed 15:21]--[2017-03-22 Wed 15:47] =>  0:26
+    CLOCK: [2017-03-22 Wed 14:35]--[2017-03-22 Wed 15:20] =>  0:45
+    CLOCK: [2017-03-22 Wed 14:03]--[2017-03-22 Wed 14:34] =>  0:31
+    CLOCK: [2017-03-22 Wed 12:44]--[2017-03-22 Wed 12:59] =>  0:15
+    CLOCK: [2017-03-22 Wed 10:02]--[2017-03-22 Wed 12:43] =>  2:41
+    CLOCK: [2017-03-21 Tue 20:01]--[2017-03-21 Tue 20:51] =>  0:50
+    CLOCK: [2017-03-21 Tue 17:53]--[2017-03-21 Tue 18:40] =>  0:47
+    CLOCK: [2017-03-21 Tue 15:30]--[2017-03-21 Tue 16:01] =>  0:31
+    CLOCK: [2017-03-21 Tue 14:10]--[2017-03-21 Tue 14:26] =>  0:16
+    CLOCK: [2017-03-21 Tue 12:10]--[2017-03-21 Tue 12:30] =>  0:20
+
+At present it is not possible to create a concept inside a
+package or reuse concepts across models. This is because we do not
+resolve the refines container of a concept, or the models container of
+an object. We could trivially add resolution to concept expansion but
+we do not have a use case for this yet. The approach should be similar
+to what we did for generalisation expansion: call the
+resolver. However, we need to refactor the resolver because we need to
+use the same algorithm but this time on the concepts container.
+
+*Previous Understanding*
+
+#+begin_quote
+*Story*: As a dogen user, I want to place concepts in packages so that
+I can scope them when required.
+#+end_quote
+
+At present it is not possible to create a concept inside a
+package. This is because the concept qualified name is assumed to be
+at top-level. In the future it may be useful to use scoping for
+concept names in the stereotype. We do not yet have a use case for
+this.
+
+This can be done trivially by:
+
+- allowing (or forcing?) the stereotype to have the package path;
+- using the package path in stereotype expansion when constructing the
+  concept name.
+
+Merged stories:
+
+*Concepts do not work in namespaces*
+
+We just fail to resole them and do not even throw an error.
+
+We can either always place concepts on the model namespace or we can
+fix resolver to default to current scope.
 
 *** STARTED Implement the database model using Northwind              :story:
     CLOCK: [2017-03-20 Mon 20:45]--[2017-03-20 Mon 22:43] =>  1:58
@@ -199,57 +253,6 @@ Tasks:
 
 - inject a new fabric type for test data configuration. It can be a
   simple struct.
-
-*** STARTED Concepts cannot be placed inside of packages              :story:
-    CLOCK: [2017-03-22 Wed 15:59]--[2017-03-22 Wed 16:31] =>  0:32
-    CLOCK: [2017-03-22 Wed 15:48]--[2017-03-22 Wed 15:58] =>  0:10
-    CLOCK: [2017-03-22 Wed 15:21]--[2017-03-22 Wed 15:47] =>  0:26
-    CLOCK: [2017-03-22 Wed 14:35]--[2017-03-22 Wed 15:20] =>  0:45
-    CLOCK: [2017-03-22 Wed 14:03]--[2017-03-22 Wed 14:34] =>  0:31
-    CLOCK: [2017-03-22 Wed 12:44]--[2017-03-22 Wed 12:59] =>  0:15
-    CLOCK: [2017-03-22 Wed 10:02]--[2017-03-22 Wed 12:43] =>  2:41
-    CLOCK: [2017-03-21 Tue 20:01]--[2017-03-21 Tue 20:51] =>  0:50
-    CLOCK: [2017-03-21 Tue 17:53]--[2017-03-21 Tue 18:40] =>  0:47
-    CLOCK: [2017-03-21 Tue 15:30]--[2017-03-21 Tue 16:01] =>  0:31
-    CLOCK: [2017-03-21 Tue 14:10]--[2017-03-21 Tue 14:26] =>  0:16
-    CLOCK: [2017-03-21 Tue 12:10]--[2017-03-21 Tue 12:30] =>  0:20
-
-At present it is not possible to create a concept inside a
-package or reuse concepts across models. This is because we do not
-resolve the refines container of a concept, or the models container of
-an object. We could trivially add resolution to concept expansion but
-we do not have a use case for this yet. The approach should be similar
-to what we did for generalisation expansion: call the
-resolver. However, we need to refactor the resolver because we need to
-use the same algorithm but this time on the concepts container.
-
-*Previous Understanding*
-
-#+begin_quote
-*Story*: As a dogen user, I want to place concepts in packages so that
-I can scope them when required.
-#+end_quote
-
-At present it is not possible to create a concept inside a
-package. This is because the concept qualified name is assumed to be
-at top-level. In the future it may be useful to use scoping for
-concept names in the stereotype. We do not yet have a use case for
-this.
-
-This can be done trivially by:
-
-- allowing (or forcing?) the stereotype to have the package path;
-- using the package path in stereotype expansion when constructing the
-  concept name.
-
-Merged stories:
-
-*Concepts do not work in namespaces*
-
-We just fail to resole them and do not even throw an error.
-
-We can either always place concepts on the model namespace or we can
-fix resolver to default to current scope.
 
 *** ODB options does not cater for types placed in namespaces         :story:
 
