--- a/doc/agile/sprint_backlog_100.org
+++ b/doc/agile/sprint_backlog_100.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-23 Thu 14:11]
+#+CAPTION: Clock summary at [2017-03-23 Thu 16:21]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *20:28* |       |      | 100.0 |
+| *Total time*                                                                | *22:44* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 20:28   |       |      | 100.0 |
-| Active                                                                      |         | 20:28 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:52 |   4.2 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:30 |   2.4 |
-| COMPLETED Header directory is not part of housekeeping                      |         |       | 0:49 |   4.0 |
-| COMPLETED Disable common support on ODB for a single database               |         |       | 0:08 |   0.7 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       | 8:26 |  41.2 |
-| COMPLETED Use =cxx= extension with ODB files                                |         |       | 0:32 |   2.6 |
-| STARTED Implement the database model using Northwind                        |         |       | 1:58 |   9.6 |
-| STARTED Allow users to override string prefixes in test data                |         |       | 0:37 |   3.0 |
-| STARTED Ignore ODB files automatically                                      |         |       | 1:55 |   9.4 |
-| STARTED Improve ODB implementation                                          |         |       | 4:41 |  22.9 |
+| Stories                                                                     | 22:44   |       |      | 100.0 |
+| Active                                                                      |         | 22:44 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:52 |   3.8 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:30 |   2.2 |
+| COMPLETED Header directory is not part of housekeeping                      |         |       | 0:49 |   3.6 |
+| COMPLETED Disable common support on ODB for a single database               |         |       | 0:08 |   0.6 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       | 8:26 |  37.1 |
+| COMPLETED Use =cxx= extension with ODB files                                |         |       | 0:32 |   2.3 |
+| STARTED Implement the database model using Northwind                        |         |       | 1:58 |   8.7 |
+| STARTED Allow users to override string prefixes in test data                |         |       | 0:37 |   2.7 |
+| STARTED Ignore ODB files automatically                                      |         |       | 1:55 |   8.4 |
+| STARTED Improve ODB implementation                                          |         |       | 6:57 |  30.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -327,6 +327,7 @@ This also means we can add the ODB files to the visual studio project
 even before they get generated.
 
 *** STARTED Improve ODB implementation                                :story:
+    CLOCK: [2017-03-23 Thu 14:05]--[2017-03-23 Thu 16:21] =>  2:16
     CLOCK: [2017-03-23 Thu 07:21]--[2017-03-23 Thu 12:02] =>  4:41
 
 We have a number of stories related to ODB problems. Basically our
@@ -371,6 +372,15 @@ Notes:
 
 - we should check that ODB_INCLUDE_DIRS has been set to avoid weird
   ODB errors.
+
+Problem:
+
+- escaping in the shell is just too difficult. We are struggling to
+  get it to work on Linux with CMake, and it will be even harder to
+  get it to work under CMD on windows. We need to generate an options
+  file for each element - plus a common one for all common
+  options. The element options file will have all options that require
+  regexes.
 
 
 *** ODB options does not cater for types placed in namespaces         :story:
