--- a/doc/agile/sprint_backlog_100.org
+++ b/doc/agile/sprint_backlog_100.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-24 Fri 09:44]
+#+CAPTION: Clock summary at [2017-03-24 Fri 10:05]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *24:23* |       |      | 100.0 |
+| *Total time*                                                                | *25:27* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 24:23   |       |      | 100.0 |
-| Active                                                                      |         | 24:23 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:52 |   3.6 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:30 |   2.1 |
-| COMPLETED Header directory is not part of housekeeping                      |         |       | 0:49 |   3.3 |
+| Stories                                                                     | 25:27   |       |      | 100.0 |
+| Active                                                                      |         | 25:27 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:52 |   3.4 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:30 |   2.0 |
+| COMPLETED Header directory is not part of housekeeping                      |         |       | 0:49 |   3.2 |
 | COMPLETED Disable common support on ODB for a single database               |         |       | 0:08 |   0.5 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       | 8:26 |  34.6 |
-| COMPLETED Use =cxx= extension with ODB files                                |         |       | 0:32 |   2.2 |
-| STARTED Implement the database model using Northwind                        |         |       | 1:58 |   8.1 |
-| STARTED Allow users to override string prefixes in test data                |         |       | 0:37 |   2.5 |
-| STARTED Ignore ODB files automatically                                      |         |       | 1:55 |   7.9 |
-| STARTED Improve ODB implementation                                          |         |       | 8:36 |  35.3 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       | 8:26 |  33.1 |
+| COMPLETED Use =cxx= extension with ODB files                                |         |       | 0:32 |   2.1 |
+| STARTED Implement the database model using Northwind                        |         |       | 1:58 |   7.7 |
+| STARTED Allow users to override string prefixes in test data                |         |       | 0:37 |   2.4 |
+| STARTED Ignore ODB files automatically                                      |         |       | 1:55 |   7.5 |
+| STARTED Improve ODB implementation                                          |         |       | 9:40 |  38.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -327,6 +327,7 @@ This also means we can add the ODB files to the visual studio project
 even before they get generated.
 
 *** STARTED Improve ODB implementation                                :story:
+    CLOCK: [2017-03-24 Fri 09:01]--[2017-03-24 Fri 10:05] =>  1:04
     CLOCK: [2017-03-23 Thu 16:22]--[2017-03-23 Thu 18:01] =>  1:39
     CLOCK: [2017-03-23 Thu 14:05]--[2017-03-23 Thu 16:21] =>  2:16
     CLOCK: [2017-03-23 Thu 07:21]--[2017-03-23 Thu 12:02] =>  4:41
@@ -382,7 +383,6 @@ Problem:
   file for each element - plus a common one for all common
   options. The element options file will have all options that require
   regexes.
-
 
 *** ODB options does not cater for types placed in namespaces         :story:
 
