--- a/doc/agile/v1/sprint_backlog_00.org
+++ b/doc/agile/v1/sprint_backlog_00.org
@@ -13,24 +13,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-03-25 Sat 19:49]
+#+CAPTION: Clock summary at [2017-03-25 Sat 20:28]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *33:48* |       |       | 100.0 |
+| *Total time*                                                                | *34:26* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 33:48   |       |       | 100.0 |
-| Active                                                                      |         | 33:48 |       | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   2.6 |
+| Stories                                                                     | 34:26   |       |       | 100.0 |
+| Active                                                                      |         | 34:26 |       | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  0:52 |   2.5 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  0:30 |   1.5 |
 | COMPLETED Header directory is not part of housekeeping                      |         |       |  0:49 |   2.4 |
 | COMPLETED Disable common support on ODB for a single database               |         |       |  0:08 |   0.4 |
-| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  25.0 |
-| COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.6 |
-| COMPLETED Implement the database model using Northwind                      |         |       |  5:33 |  16.4 |
+| COMPLETED Concepts cannot be placed inside of packages                      |         |       |  8:26 |  24.5 |
+| COMPLETED Use =cxx= extension with ODB files                                |         |       |  0:32 |   1.5 |
+| COMPLETED Implement the database model using Northwind                      |         |       |  6:11 |  18.0 |
 | STARTED Allow users to override string prefixes in test data                |         |       |  0:37 |   1.8 |
-| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.7 |
-| STARTED Improve ODB implementation                                          |         |       | 14:26 |  42.7 |
+| STARTED Ignore ODB files automatically                                      |         |       |  1:55 |   5.6 |
+| STARTED Improve ODB implementation                                          |         |       | 14:26 |  41.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -192,6 +192,7 @@ found adds:
 
 *** COMPLETED Implement the database model using Northwind            :story:
     CLOSED: [2017-03-25 Sat 19:48]
+    CLOCK: [2017-03-25 Sat 19:49]--[2017-03-25 Sat 20:27] =>  0:38
     CLOCK: [2017-03-25 Sat 16:39]--[2017-03-25 Sat 19:48] =>  3:09
     CLOCK: [2017-03-25 Sat 16:12]--[2017-03-25 Sat 16:38] =>  0:26
     CLOCK: [2017-03-20 Mon 20:45]--[2017-03-20 Mon 22:43] =>  1:58
